--- a/angular-pwa/src/app/coverview/coverview.component.html
+++ b/angular-pwa/src/app/coverview/coverview.component.html
@@ -7,14 +7,14 @@
 
   <div class="section">
     <p class="attribute">Type: </p>
-    <p class="attribute2">{{drink?.strAlcoholic}}</p>  
+    <p class="attribute2">{{drink?.strAlcoholic}}</p>
   </div>
 
   <div class="section">
     <p class="attribute">Glas: </p>
     <p class="attribute2">{{drink?.strGlass}}</p>
   </div>
-  
+
   <div class="section">
     <p class="attribute">Category: </p>
     <p class="attribute2">{{drink?.strCategory}}</p>
@@ -28,11 +28,12 @@
       </div>
     </div>
   </div>
-  
+
   <div>
     <p class="attribute">Instructions:</p>
     <p>{{drink?.strInstructions}}</p>
   </div>
+  <button (click)="speak()">Speak</button>
 
 </div>
 
